--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@carbon/react": "^1.0.0",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.13.2",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
@@ -12,7 +13,9 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
     "react-redux": "^8.0.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^7.11.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.97.1"
   },
   "scripts": {
     "start": "react-scripts start",
