feat: implemented template creation page
Signed-off-by: Sen Wang <kelvin.xupt@gmail.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios|react-router-dom)/\"",
     "eject": "react-scripts eject",
     "lint": "eslint src"
   },
@@ -35,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1"
   }
 }
