--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/01_init.sql
+      - ./data.sql:/docker-entrypoint-initdb.d/02_data.sql
 
   backend:
     build: ../backend
