feat: implemented email verification code
Signed-off-by: Sen Wang <kelvin.xupt@gmail.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "awsome-prompt-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@carbon/react": "^1.0.0",
     "@reduxjs/toolkit": "^1.9.0",
