chore: serve google fonts
Signed-off-by: Sen Wang <kelvin.xupt@gmail.com>

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,6 +5,10 @@ COPY package.json package-lock.json ./
 RUN npm install
 COPY . .
 RUN npm run build
+# Pre-compress static assets
+RUN apk add --no-cache gzip && \
+    find build -type f -regex ".*\.\(html\|js\|css\|json\)$" -exec gzip -9 -k {} \;
+
 
 # Run stage
 FROM nginx:alpine
