--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,9 +5,26 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Performance
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
     location / {
         try_files $uri $uri/ /index.html;
     }
+
+    # Gzip compression
+    gzip on;
+    gzip_static on;
+    gzip_vary on;
+    gzip_min_length 1000;
+    gzip_comp_level 6;
+    gzip_proxied any;
+    gzip_types text/plain text/css text/xml application/javascript application/x-javascript application/xml application/json;
+    gzip_disable "MSIE [1-6]\.";
 
     # Optional: Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
