--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,6 +16,19 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Proxy API requests to background service
+    location /api/ {
+        proxy_pass http://backend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 60s;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+    }
+
     # Gzip compression
     gzip on;
     gzip_static on;
